--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" ng-app="finqApp" ng-controller="AppCtrl">
+<html class="no-js" ng-app="finqApp" ng-controller="AppCtrl" ng-init="pageTitle = 'Finq'">
     <head>
         <meta charset="utf-8">
         <title>{{pageTitle}}</title>
