--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html class="no-js" ng-app="finqApp" ng-controller="AppCtrl" ng-init="pageTitle = 'Finq'">
+<html class="no-js" ng-app="finqApp" ng-controller="AppCtrl as app">
     <head>
         <meta charset="utf-8">
-        <title>{{pageTitle}}</title>
+        <title>{{app.title}}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.) styles/vendor.css -->
         <!-- bower:css -->
+        <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
@@ -63,6 +64,7 @@
         <script src="scripts/modules/translate.js"></script>
         <script src="scripts/controllers/app.js"></script>
         <script src="scripts/controllers/preloader.js"></script>
+        <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/header.js"></script>
         <script src="scripts/controllers/menu.js"></script>
         <script src="scripts/controllers/runner/available.js"></script>
