Add authentication service and mock for simulation of a failed session based authentication

--- a/app/index.html
+++ b/app/index.html
@@ -65,14 +65,16 @@
         <script src="scripts/controllers/app.js"></script>
         <script src="scripts/controllers/preloader.js"></script>
         <script src="scripts/controllers/login.js"></script>
-        <script src="scripts/controllers/header.js"></script>
-        <script src="scripts/controllers/menu.js"></script>
+        <script src="scripts/controllers/layout/header.js"></script>
+        <script src="scripts/controllers/layout/menu.js"></script>
         <script src="scripts/controllers/runner/available.js"></script>
         <script src="scripts/services/config.js"></script>
         <script src="scripts/services/page.js"></script>
         <script src="scripts/services/translate.js"></script>
+        <script src="scripts/services/authenticate.js"></script>
         <script src="scripts/directives/include.js"></script>
         <script src="scripts/mockdata/app.js"></script>
+        <script src="scripts/mockdata/auth.js"></script>
         <script src="scripts/mockdata/story.js"></script>
         <!-- endbuild -->
     </body>
