--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
         <script src="scripts/controllers/layout/menu.js"></script>
         <script src="scripts/controllers/runner/available.js"></script>
         <script src="scripts/services/config.js"></script>
+        <script src="scripts/services/backend.js"></script>
         <script src="scripts/services/page.js"></script>
         <script src="scripts/services/translate.js"></script>
         <script src="scripts/services/authenticate.js"></script>
