--- a/app/index.html
+++ b/app/index.html
@@ -73,11 +73,12 @@
         <script src="scripts/services/page.js"></script>
         <script src="scripts/services/translate.js"></script>
         <script src="scripts/services/authenticate.js"></script>
+        <script src="scripts/services/set.js"></script>
         <script src="scripts/directives/include.js"></script>
         <script src="scripts/directives/filter-select.js"></script>
         <script src="scripts/mockdata/app.js"></script>
         <script src="scripts/mockdata/auth.js"></script>
-        <script src="scripts/mockdata/story.js"></script>
+        <script src="scripts/mockdata/set.js"></script>
         <!-- endbuild -->
     </body>
 </html>
