--- a/app/index.html
+++ b/app/index.html
@@ -68,17 +68,20 @@
         <script src="scripts/controllers/layout/header.js"></script>
         <script src="scripts/controllers/layout/menu.js"></script>
         <script src="scripts/controllers/runner/available.js"></script>
+        <script src="scripts/controllers/runner/filter.js"></script>
         <script src="scripts/services/config.js"></script>
         <script src="scripts/services/backend.js"></script>
         <script src="scripts/services/page.js"></script>
         <script src="scripts/services/translate.js"></script>
         <script src="scripts/services/authenticate.js"></script>
         <script src="scripts/services/set.js"></script>
+        <script src="scripts/services/tag.js"></script>
         <script src="scripts/directives/include.js"></script>
         <script src="scripts/directives/filter-select.js"></script>
         <script src="scripts/mockdata/app.js"></script>
         <script src="scripts/mockdata/auth.js"></script>
         <script src="scripts/mockdata/set.js"></script>
+        <script src="scripts/mockdata/tag.js"></script>
         <!-- endbuild -->
     </body>
 </html>
