--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,6 @@
         <script src="scripts/modules/organizer.js"></script>
         <script src="scripts/modules/reporter.js"></script>
         <script src="scripts/modules/writer.js"></script>
-        <script src="scripts/modules/mock.js"></script>
         <script src="scripts/modules/translate.js"></script>
         <script src="scripts/controllers/app.js"></script>
         <script src="scripts/controllers/preloader.js"></script>
@@ -78,6 +77,10 @@
         <script src="scripts/services/tag.js"></script>
         <script src="scripts/directives/include.js"></script>
         <script src="scripts/directives/filter-select.js"></script>
+        <!-- endbuild -->
+
+        <!-- build:js -->
+        <script src="scripts/modules/mock.js"></script>
         <script src="scripts/mockdata/app.js"></script>
         <script src="scripts/mockdata/auth.js"></script>
         <script src="scripts/mockdata/set.js"></script>
