Add the retrieval of story books and the application of a set filter to the available section

--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,9 @@
         <script src="scripts/services/translate.js"></script>
         <script src="scripts/services/authenticate.js"></script>
         <script src="scripts/services/set.js"></script>
+        <script src="scripts/services/story.js"></script>
         <script src="scripts/services/tag.js"></script>
+        <script src="scripts/filters/story-book-set.js"></script>
         <script src="scripts/directives/include.js"></script>
         <script src="scripts/directives/filter-select.js"></script>
         <!-- endbuild -->
@@ -85,6 +87,7 @@
         <script src="scripts/mockdata/auth.js"></script>
         <script src="scripts/mockdata/set.js"></script>
         <script src="scripts/mockdata/tag.js"></script>
+        <script src="scripts/mockdata/story.js"></script>
         <!-- endbuild -->
     </body>
 </html>
