--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
 
         <!-- build:js(.) scripts/vendor.js -->
         <!-- bower:js -->
+        <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/json3/lib/json3.js"></script>
         <script src="bower_components/angular-resource/angular-resource.js"></script>
@@ -49,6 +50,8 @@
         <script src="bower_components/angular-route/angular-route.js"></script>
         <script src="bower_components/angular-translate/angular-translate.js"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+        <script src="bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
+        <script src="bower_components/angular-typeahead/angular-typeahead.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -75,10 +78,13 @@
         <script src="scripts/services/set.js"></script>
         <script src="scripts/services/story.js"></script>
         <script src="scripts/services/tag.js"></script>
+        <script src="scripts/services/search/storybook-search.js"></script>
         <script src="scripts/filters/storybook-set.js"></script>
         <script src="scripts/filters/story-set.js"></script>
         <script src="scripts/filters/storybook-tag.js"></script>
         <script src="scripts/filters/story-tag.js"></script>
+        <script src="scripts/filters/storybook-search.js"></script>
+        <script src="scripts/filters/story-search.js"></script>
         <script src="scripts/directives/include.js"></script>
         <script src="scripts/directives/filter-select.js"></script>
         <!-- endbuild -->
