Extract story tree interaction into a separate service to allow reuse of this logic within different controllers

--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,7 @@
         <script src="scripts/services/story.js"></script>
         <script src="scripts/services/tag.js"></script>
         <script src="scripts/services/search/storybook-search.js"></script>
+        <script src="scripts/services/support/story-collapse.js"></script>
         <script src="scripts/filters/storybook-set.js"></script>
         <script src="scripts/filters/story-set.js"></script>
         <script src="scripts/filters/storybook-tag.js"></script>
