--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,6 @@
         <title>{{app.title}}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.) styles/vendor.css -->
         <!-- bower:css -->
         <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
@@ -18,17 +17,6 @@
     <body>
 
         <div class="layout" ui-view></div>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-        <script>
-           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-           ga('create', 'UA-XXXXX-X');
-           ga('send', 'pageview');
-        </script>
 
         <!-- build:js(.) scripts/oldieshim.js -->
         <!--[if lt IE 9]>
@@ -90,7 +78,7 @@
         <script src="scripts/directives/filter-select.js"></script>
         <!-- endbuild -->
 
-        <!-- build:js -->
+        <!-- build:js({.tmp,app}) scripts/mock.js -->
         <script src="bower_components/angular-mocks/angular-mocks.js"></script>
         <script src="scripts/modules/mock.js"></script>
         <script src="scripts/mockdata/app.js"></script>
