--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
         <script src="scripts/services/set.js"></script>
         <script src="scripts/services/story.js"></script>
         <script src="scripts/services/tag.js"></script>
+        <script src="scripts/services/environment.js"></script>
         <script src="scripts/services/search/storybook-search.js"></script>
         <script src="scripts/services/support/story-collapse.js"></script>
         <script src="scripts/filters/storybook-set.js"></script>
@@ -85,6 +86,7 @@
         <script src="scripts/mockdata/auth.js"></script>
         <script src="scripts/mockdata/set.js"></script>
         <script src="scripts/mockdata/tag.js"></script>
+        <script src="scripts/mockdata/environment.js"></script>
         <script src="scripts/mockdata/story.js"></script>
         <!-- endbuild -->
     </body>
