Add pagination support to avoid too many DOM elements in case of a lot of stories

--- a/app/index.html
+++ b/app/index.html
@@ -75,11 +75,13 @@
         <script src="scripts/filters/story-tag.js"></script>
         <script src="scripts/filters/storybook-search.js"></script>
         <script src="scripts/filters/story-search.js"></script>
+        <script src="scripts/filters/storybook-pagination.js"></script>
         <script src="scripts/directives/include.js"></script>
         <script src="scripts/directives/filter-select.js"></script>
+        <script src="scripts/directives/pagination.js"></script>
         <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/mock.js -->
+        <!-- build:js -->
         <script src="bower_components/angular-mocks/angular-mocks.js"></script>
         <script src="scripts/modules/mock.js"></script>
         <script src="scripts/mockdata/app.js"></script>
