--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,7 @@
         <script src="scripts/controllers/runner/filter.js"></script>
         <script src="scripts/services/config.js"></script>
         <script src="scripts/services/backend.js"></script>
+        <script src="scripts/services/host.js"></script>
         <script src="scripts/services/page.js"></script>
         <script src="scripts/services/translate.js"></script>
         <script src="scripts/services/authenticate.js"></script>
