--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
         <script src="scripts/filters/story-search.js"></script>
         <script src="scripts/filters/storybook-pagination.js"></script>
         <script src="scripts/directives/include.js"></script>
+        <script src="scripts/directives/outside-click.js"></script>
         <script src="scripts/directives/filter-select.js"></script>
         <script src="scripts/directives/pagination.js"></script>
         <!-- endbuild -->
