Add support for tagging on scenario level in addition to inherited tags on story level

--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
         <script src="scripts/filters/story-set.js"></script>
         <script src="scripts/filters/storybook-tag.js"></script>
         <script src="scripts/filters/story-tag.js"></script>
+        <script src="scripts/filters/scenario-tag.js"></script>
         <script src="scripts/filters/storybook-search.js"></script>
         <script src="scripts/filters/story-search.js"></script>
         <script src="scripts/filters/basic-pagination.js"></script>
