--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/layout/header.js"></script>
         <script src="scripts/controllers/layout/menu.js"></script>
+        <script src="scripts/controllers/layout/feedback.js"></script>
         <script src="scripts/controllers/runner/available.js"></script>
         <script src="scripts/controllers/runner/filter.js"></script>
         <script src="scripts/services/config.js"></script>
@@ -63,6 +64,7 @@
         <script src="scripts/services/page.js"></script>
         <script src="scripts/services/translate.js"></script>
         <script src="scripts/services/authenticate.js"></script>
+        <script src="scripts/services/feedback.js"></script>
         <script src="scripts/services/set.js"></script>
         <script src="scripts/services/tag.js"></script>
         <script src="scripts/services/environment.js"></script>
