Add story run service logic and a subscription stub, also add queuing logic to the feedback controller

--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
         <script src="scripts/services/set.js"></script>
         <script src="scripts/services/tag.js"></script>
         <script src="scripts/services/environment.js"></script>
+        <script src="scripts/services/subscription.js"></script>
         <script src="scripts/services/story/story.js"></script>
         <script src="scripts/services/story/story-collapse.js"></script>
         <script src="scripts/services/story/story-run.js"></script>
