Fix appear fade effect during navigation and change run execution to a run by story approach

--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,7 @@
         <script src="scripts/controllers/app.js"></script>
         <script src="scripts/controllers/preloader.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/layout/layout.js"></script>
         <script src="scripts/controllers/layout/header.js"></script>
         <script src="scripts/controllers/layout/menu.js"></script>
         <script src="scripts/controllers/layout/feedback.js"></script>
