--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,8 @@
         <script src="bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
         <script src="bower_components/angular-typeahead/angular-typeahead.js"></script>
         <script src="bower_components/angular-socket-io/socket.js"></script>
+        <script src="bower_components/showdown/src/showdown.js"></script>
+        <script src="bower_components/angular-markdown-directive/markdown.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -73,6 +75,7 @@
         <script src="scripts/services/setup.js"></script>
         <script src="scripts/services/backend.js"></script>
         <script src="scripts/services/page.js"></script>
+        <script src="scripts/services/utils.js"></script>
         <script src="scripts/services/module/module.js"></script>
         <script src="scripts/services/module/runner/runner.js"></script>
         <script src="scripts/services/module/runner/runner-filter.js"></script>
@@ -102,6 +105,7 @@
         <script src="scripts/directives/outside-click.js"></script>
         <script src="scripts/directives/filter-select.js"></script>
         <script src="scripts/directives/pagination.js"></script>
+        <script src="scripts/directives/radial-progress.js"></script>
 
         <script src="scripts/plugins/story-collapse.js"></script>
         <!-- endbuild -->
