Add responsive behavior to the running story list

--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
         <script src="scripts/constants/events.js"></script>
         <script src="scripts/constants/feedback.js"></script>
         <script src="scripts/constants/modules.js"></script>
+        <script src="scripts/constants/state.js"></script>
 
         <script src="scripts/modules/runner.js"></script>
         <script src="scripts/modules/organizer.js"></script>
