Add a socket run simulator and fix an issue with scenario completed counts (tests failing)

--- a/app/index.html
+++ b/app/index.html
@@ -116,6 +116,7 @@
         <script src="scripts/mockdata/auth.js"></script>
         <script src="scripts/mockdata/set.js"></script>
         <script src="scripts/mockdata/tag.js"></script>
+        <script src="scripts/mockdata/runner.js"></script>
         <script src="scripts/mockdata/environment.js"></script>
         <script src="scripts/mockdata/story.js"></script>
         <!-- endbuild -->
