--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,7 @@
         <script src="scripts/services/updates/websocket.js"></script>
         <script src="scripts/services/story/story.js"></script>
         <script src="scripts/services/story/story-run.js"></script>
+        <script src="scripts/services/story/story-running.js"></script>
         <script src="scripts/services/story/storybook-search.js"></script>
 
         <script src="scripts/filters/storybook-set.js"></script>
