Add the environment filter to the running stories list

--- a/app/index.html
+++ b/app/index.html
@@ -100,6 +100,7 @@
         <script src="scripts/filters/story-search.js"></script>
         <script src="scripts/filters/basic-pagination.js"></script>
         <script src="scripts/filters/storybook-pagination.js"></script>
+        <script src="scripts/filters/run-environment.js"></script>
 
         <script src="scripts/directives/include.js"></script>
         <script src="scripts/directives/outside-click.js"></script>
