Rename and move story-running service to run service for generic run handling

--- a/app/index.html
+++ b/app/index.html
@@ -82,13 +82,13 @@
         <script src="scripts/services/feedback.js"></script>
         <script src="scripts/services/set.js"></script>
         <script src="scripts/services/tag.js"></script>
+        <script src="scripts/services/run.js"></script>
         <script src="scripts/services/environment.js"></script>
         <script src="scripts/services/updates/subscription.js"></script>
         <script src="scripts/services/updates/socket.js"></script>
         <script src="scripts/services/updates/websocket.js"></script>
         <script src="scripts/services/story/story.js"></script>
         <script src="scripts/services/story/story-run.js"></script>
-        <script src="scripts/services/story/story-running.js"></script>
         <script src="scripts/services/story/storybook-search.js"></script>
 
         <script src="scripts/filters/storybook-set.js"></script>
