--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
         <script src="scripts/constants/state.js"></script>
 
         <script src="scripts/modules/translate.js"></script>
-        <script src="scripts/modules/runner/runner.js"></script>
+        <script src="scripts/modules/runner.js"></script>
         <script src="scripts/modules/organizer.js"></script>
         <script src="scripts/modules/reporter.js"></script>
         <script src="scripts/modules/writer.js"></script>
