Prepare the running services to work with page based run resources

--- a/app/index.html
+++ b/app/index.html
@@ -121,6 +121,7 @@
         <script src="scripts/modules/runner/simulator/runner.js"></script>
         <script src="scripts/mockdata/environment.js"></script>
         <script src="scripts/mockdata/story.js"></script>
+        <script src="scripts/mockdata/run.js"></script>
         <!-- endbuild -->
     </body>
 </html>
