Add a separate mockfile for the report listing

--- a/app/index.html
+++ b/app/index.html
@@ -122,6 +122,7 @@
         <script src="scripts/mockdata/environment.js"></script>
         <script src="scripts/mockdata/story.js"></script>
         <script src="scripts/mockdata/run.js"></script>
+        <script src="scripts/mockdata/report.js"></script>
         <!-- endbuild -->
     </body>
 </html>
