Add a value service for global values and add stubs for the report history controller

--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
         <script src="scripts/modules/runner/controllers/running-filter.js"></script>
 
         <script src="scripts/services/config.js"></script>
+        <script src="scripts/services/value.js"></script>
         <script src="scripts/services/setup.js"></script>
         <script src="scripts/services/backend.js"></script>
         <script src="scripts/services/page.js"></script>
