Add initial set of controllers and services for the run report history section

--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
         <script src="scripts/modules/runner/controllers/running.js"></script>
         <script src="scripts/modules/runner/controllers/available-filter.js"></script>
         <script src="scripts/modules/runner/controllers/running-filter.js"></script>
+        <script src="scripts/modules/reporter/controllers/history.js"></script>
 
         <script src="scripts/services/config.js"></script>
         <script src="scripts/services/value.js"></script>
@@ -82,6 +83,7 @@
         <script src="scripts/services/set.js"></script>
         <script src="scripts/services/tag.js"></script>
         <script src="scripts/services/run.js"></script>
+        <script src="scripts/services/report.js"></script>
         <script src="scripts/services/environment.js"></script>
         <script src="scripts/services/updates/subscription.js"></script>
         <script src="scripts/services/updates/socket.js"></script>
@@ -91,6 +93,7 @@
         <script src="scripts/services/story/storybook-search.js"></script>
         <script src="scripts/modules/runner/services/runner.js"></script>
         <script src="scripts/modules/runner/services/runner-filter.js"></script>
+        <script src="scripts/modules/reporter/services/reporter-filter.js"></script>
 
         <script src="scripts/filters/storybook-set.js"></script>
         <script src="scripts/filters/story-set.js"></script>
