--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
         <script src="scripts/modules/runner/controllers/running-filter.js"></script>
         <script src="scripts/modules/runner/controllers/reports.js"></script>
         <script src="scripts/modules/runner/controllers/report-filter.js"></script>
+        <script src="scripts/modules/runner/controllers/report.js"></script>
 
         <script src="scripts/services/generic/config.js"></script>
         <script src="scripts/services/value.js"></script>
