Add listing of steps and status of steps to the report view and add a run utils service and base test

--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,7 @@
         <script src="scripts/modules/runner/services/runner.js"></script>
         <script src="scripts/modules/runner/services/runner-filter.js"></script>
         <script src="scripts/modules/runner/services/reporter-filter.js"></script>
+        <script src="scripts/modules/runner/services/run-utils.js"></script>
 
         <script src="scripts/filters/basic-pagination.js"></script>
         <script src="scripts/modules/runner/filters/storybook-set.js"></script>
