Add current user to layout which displays firstname, lastname and user image using gravatar

--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
         <script src="bower_components/angular-typeahead/angular-typeahead.js"></script>
+        <script src="bower_components/angular-md5/angular-md5.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
