Inject vendor css before app css.

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,11 @@
     <title>{{app.title}}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <!-- inject:css -->
+
+    <!-- vendor:css -->
+    <!-- endinject -->
+
+    <!-- app:css -->
     <!-- endinject -->
 </head>
 <body>
@@ -14,7 +18,7 @@
 <!-- vendor:js -->
 <!-- endinject -->
 
-<!-- scripts:js -->
+<!-- app:js -->
 <!-- endinject -->
 
 </body>
