--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" ng-app="finqApp" ng-controller="AppCtrl as app">
+<html class="no-js" ng-app="finqApp" ng-strict-di ng-controller="AppCtrl as app">
 <head lang="en">
     <meta charset="UTF-8">
     <title>{{app.title}}</title>
